--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "read_token"
-version = "0.0.15"
+version = "0.1.0"
 authors = ["bvssvni <bvssvni@gmail.com>"]
 keywords = ["read", "parse", "token", "piston"]
 description = "A simple library to read tokens using look ahead"
@@ -15,6 +15,5 @@ homepage = "https://github.com/pistondevelopers/read_token"
 name = "read_token"
 path = "src/lib.rs"
 
-[dependencies.range]
-git = "https://github.com/pistondevelopers/range"
-#version = "0.0.9"
+[dependencies]
+range = "0.1.0"
